syntax = "proto3";
package Example;

enum MessageID {
  CS_Login = 10001;
  CS_Login2 = 10002;
  SC_Login = 10002;
}

message CS_Login {
  string userName = 1;
  string userPwd = 2;
}

message CS_Login2 {
  string userName = 1;
  string userPwd = 2;
}
